# python-project-50

./: Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: checks.yml
gendiff/: __init__.py  auxiliary.py  gendiff.py  parser.py  request.py
gendiff/formaters/: json.py  plain.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.json  file2.json  right.json  right_2.json  right_json.json  right_plain.json
tests/json_files/: right.json
